update:  swag 更新 ，拦截修改
