# cloud-monitor-region/docs/swagger.json
@@ -1,13 +1,32 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
-        "title": "Swagger Example API",
-        "contact": {},
-        "version": "0.0.1"
+        "contact": {}
     },
-    "basePath": "/",
     "paths": {
+        "/hawkeye/instance/page": {
+            "get": {
+                "description": "GetInstanceNumByRegion",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "InstanceCtl"
+                ],
+                "summary": "GetInstanceNumByRegion",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.AlarmInstanceRegionVO"
+                        }
+                    }
+                }
+            }
+        },
         "/hawkeye/monitorProduct/getById": {
             "get": {
                 "description": "GetById",
@@ -34,7 +53,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MonitorProduct"
+                            "type": "string"
                         }
                     }
                 }
@@ -42,31 +61,54 @@
         }
     },
     "definitions": {
-        "models.MonitorProduct": {
+        "controllers.AlarmInstanceRegionVO": {
             "type": "object",
             "properties": {
-                "create_time": {
-                    "description": "创建时间",
+                "bindNum": {
+                    "description": "*\n\t * 已绑定实例数",
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "global.Resp": {
+            "type": "object",
+            "properties": {
+                "allowRetry": {
+                    "type": "boolean"
+                },
+                "errorArgs": {
+                    "type": "array",
+                    "items": {}
+                },
+                "errorCode": {
                     "type": "string"
                 },
-                "create_user": {
-                    "description": "创建人",
+                "errorMsg": {
                     "type": "string"
                 },
-                "description": {
-                    "description": "描述",
-                    "type": "string"
+                "module": {},
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "vo.PageVO": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "type": "integer"
                 },
-                "id": {
-                    "description": "ID",
-                    "type": "string"
+                "records": {
+                    "type": "array",
+                    "items": {}
                 },
-                "name": {
-                    "description": "监控产品名称",
-                    "type": "string"
+                "size": {
+                    "type": "integer"
                 },
-                "status": {
-                    "description": "状态 0:停用 1:启用",
+                "total": {
                     "type": "integer"
                 }
             }
